plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'SKHP'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation platform('org.junit:junit-bom:5.10.0') // dodane
    testImplementation 'org.junit.jupiter:junit-jupiter' // dodane
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
    implementation 'jakarta.el:jakarta.el-api:6.0.1'
    implementation 'org.hibernate:hibernate-core:6.2.7.Final'
    implementation 'com.sun.istack:istack-commons-runtime:4.2.0'
    implementation 'org.apache.logging.log4j:log4j-core:3.0.0-beta1'
    implementation 'org.apache.logging.log4j:log4j-api:3.0.0-beta1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:3.0.0-beta2'
    implementation 'com.zaxxer:HikariCP:5.0.1'
}

test {
    useJUnitPlatform()
}